chapter1-basics/log_output/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loggenerator
  template:
    metadata:
      labels:
        app: loggenerator
    spec:
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: shared-data-pvc
      containers:
        - name: log-generator
          image: rahul004x/log-generator:v3
          volumeMounts:
            - name: shared-data
              mountPath: /shared
        - name: log-reader
          image: rahul004x/log-reader:v4
          ports:
            - containerPort: 3003
          volumeMounts:
            - name: shared-data
              mountPath: /shared
