chapter1-basics/log_output/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: logger-app-svc
spec:
  type: ClusterIP
  selector:
    app: loggenerator
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3003
